# Esercitazione_2_OOP

./: CMakeLists.txt  main.cpp
